# max_e1_apps

./: README.md  build_install.bash  uninstall.bash
.devcontainer/: Dockerfile  devcontainer.json
hello_max_e1/: CMakeLists.txt  README.md  main.cpp
max_e1_examples/: CMakeLists.txt  README.md  actuators_example.cpp  read_example.cpp
max_e1_examples/src/: motions_example.cpp
max_e1_lib/: CMakeLists.txt  README.md
max_e1_lib/include/: max_e1.hpp  max_e1_actuators.hpp  max_e1_core.hpp  max_e1_motions.hpp  max_e1_sensors.hpp
max_e1_lib/src/: max_e1.cpp  max_e1_actuators.cpp  max_e1_core.cpp  max_e1_motions.cpp  max_e1_sensors.cpp
